src/snapshots/alma__parser__tests__expression_parser-78.snap
---
source: src/parser.rs
expression: "parse(\"function record.access\")"

---
Input:

function record.access

Result:

Node {
    start: 0,
    end: 22,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 8,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: 0,
                                end: 8,
                                line: 1,
                                column: 0,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
            [
                Node {
                    start: 9,
                    end: 22,
                    line: 1,
                    column: 9,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: PropAccess(
                            Node {
                                start: 9,
                                end: 15,
                                line: 1,
                                column: 9,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Identifier(
                                        None,
                                        Identifier(
                                            Node {
                                                start: 9,
                                                end: 15,
                                                line: 1,
                                                column: 9,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 2,
                                                    },
                                                },
                                            },
                                        ),
                                    ),
                                },
                            },
                            Node {
                                start: 16,
                                end: 22,
                                line: 1,
                                column: 16,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 3,
                                    },
                                },
                            },
                        ),
                    },
                },
            ],
        ),
    },
}
