src/snapshots/alma__parser__tests__expression_parser-79.snap
---
source: src/parser.rs
expression: "parse(\"A.b\")"

---
Input:

A.b

Result:

Node {
    start: 0,
    end: 3,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier(
            Some(
                ModuleName {
                    parts: [
                        Node {
                            start: 0,
                            end: 1,
                            line: 1,
                            column: 0,
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 1,
                    },
                },
            ),
            Identifier(
                Node {
                    start: 2,
                    end: 3,
                    line: 1,
                    column: 2,
                    value: Identifier_ {
                        name: SymbolU32 {
                            value: 2,
                        },
                    },
                },
            ),
        ),
    },
}
