src/snapshots/alma__parser__tests__expression_parser-8.snap
---
source: src/parser.rs
expression: "parse(\"espaÆàʥñÑol\")"

---
Input:

espaÆàʥñÑol

Result:

Node {
    start: 0,
    end: 16,
    line: 1,
    column: 0,
    value: Identifier(
        Node {
            start: 0,
            end: 16,
            line: 1,
            column: 0,
            value: Identifier_ {
                name: "espaÆàʥñÑol",
            },
        },
    ),
}
