src/snapshots/alma__parser__tests__expression_parser-9.snap
---
source: src/parser.rs
expression: "parse(\"\\\"😄\\\"\")"

---
Input:

"😄"

Result:

Node {
    start: 0,
    end: 6,
    line: 1,
    column: 0,
    value: String_(
        "😄",
    ),
}
