src/snapshots/alma__parser__tests__expression_parser.snap
---
source: src/parser.rs
expression: "parse(\"True\")"

---
Input:

True

Result:

Node {
    start: 0,
    end: 4,
    line: 1,
    column: 0,
    value: Bool(
        true,
    ),
}
