src/snapshots/alma__parser__tests__module_parser-12.snap
---
source: src/parser.rs
expression: "parse(\"module Test exposing (a)\\n\\na = 1\\n\\nb = True\")"

---
Input:

module Test exposing (a)

a = 1

b = True

Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: Identifier_ {
                        name: "Test",
                        case: Pascal,
                    },
                },
            ],
            full_name: "Test",
        },
        exports: [
            Node {
                start: 22,
                end: 23,
                line: 1,
                column: 22,
                value: Identifier(
                    Node {
                        start: 22,
                        end: 23,
                        line: 1,
                        column: 22,
                        value: Identifier_ {
                            name: "a",
                            case: Camel,
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            Pattern(
                Node {
                    start: 26,
                    end: 27,
                    line: 3,
                    column: 0,
                    value: Identifier(
                        Node {
                            start: 26,
                            end: 27,
                            line: 3,
                            column: 0,
                            value: Identifier_ {
                                name: "a",
                                case: Camel,
                            },
                        },
                    ),
                },
                Node {
                    start: 30,
                    end: 31,
                    line: 3,
                    column: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Float(
                            1.0,
                        ),
                    },
                },
            ),
            Pattern(
                Node {
                    start: 33,
                    end: 34,
                    line: 5,
                    column: 0,
                    value: Identifier(
                        Node {
                            start: 33,
                            end: 34,
                            line: 5,
                            column: 0,
                            value: Identifier_ {
                                name: "b",
                                case: Camel,
                            },
                        },
                    ),
                },
                Node {
                    start: 37,
                    end: 41,
                    line: 5,
                    column: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Bool(
                            true,
                        ),
                    },
                },
            ),
        ],
    },
    [],
)
