src/snapshots/alma__parser__tests__module_parser-14.snap
---
source: src/parser.rs
expression: "parse(\"module Test exposing a, b\\n\\na = 1\\n\\nb = True\")"

---
Input:

module Test exposing a, b

a = 1

b = True

Result:

1:21: Parsing the module exports expected a comma separated list of exports inside parenthesis, but instead found: 'a'

  1│  module Test exposing a, b
   │                       ↑
  2│  
  3│  a = 1

Error {
    message: "1:21: Parsing the module exports expected a comma separated list of exports inside parenthesis, but instead found: \'a\'\n\n  1│  module Test exposing a, b\n   │                       ↑\n  2│  \n  3│  a = 1",
    token: Token {
        kind: Identifier,
        position: 21,
        end_position: 22,
        lexeme: "a",
        line: 1,
        column: 21,
        indent: 0,
    },
}
