src/snapshots/alma__parser__tests__module_parser-15.snap
---
source: src/parser.rs
expression: "parse(\"module Test exposing (a b)\\n\\na = 1\\n\\nb = True\")"

---
Input:

module Test exposing (a b)

a = 1

b = True

Result:

1:24: Parsing the module exports expected a comma separated list of exports inside parenthesis, but instead found: 'b'

  1│  module Test exposing (a b)
   │                          ↑
  2│  
  3│  a = 1

Error {
    message: "1:24: Parsing the module exports expected a comma separated list of exports inside parenthesis, but instead found: 'b'\n\n  1│  module Test exposing (a b)\n   │                          ↑\n  2│  \n  3│  a = 1",
    token: Token {
        kind: Identifier,
        position: 24,
        end_position: 25,
        lexeme: "b",
        line: 1,
        column: 24,
        indent: 0,
    },
}
