src/snapshots/alma__parser__tests__module_parser-17.snap
---
source: src/parser.rs
expression: "parse(\"module Test\\n\\nimport Banana\")"

---
Input:

module Test

import Banana

Result:

[
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: Identifier_ {
                        name: "Test",
                        case: Pascal,
                    },
                },
            ],
            full_name: "Test",
        },
        exports: [],
        imports: [
            Node {
                start: 13,
                end: 26,
                line: 3,
                column: 0,
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: 20,
                                end: 26,
                                line: 3,
                                column: 7,
                                value: Identifier_ {
                                    name: "Banana",
                                    case: Pascal,
                                },
                            },
                        ],
                        full_name: "Banana",
                    },
                    alias: None,
                    exposing: [],
                },
            },
        ],
        definitions: [],
    },
]
